<resources>
    <string name="app_name">Wildcats Hub</string>
    <string name="registration_form">Registration Form</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="cit_email">Institutional Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_account">Already have an account?</string>
    <string name="wildcats">Wildcats</string>
    <string name="welcome_teknoy">Welcome Teknoy!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="taskmaster">Taskmaster</string>
    <string name="button">Button</string>
    <string name="google_maps_cit_u">Google Maps CIT- U</string>
    <string name="directory">Directory</string>
    <string name="calendar">Calendar</string>
    <string name="emergency">Emergency</string>
    <string name="alexander_franco_delantar_gmail_com">alexander.franco.delantar@gmail.com</string>
    <string-array name="priority_levels">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open Nav</string>
    <string name="close">Close Nav</string>
    <string name="clear">Clear</string>
    <string name="send_message">Send Message</string>
    <string name="enter_message">Enter Message</string>
    <string name="enter_phone_number">Enter Phone Number</string>
</resources>