<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bgimg"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_reg"
        android:layout_width="380dp"
        android:layout_height="627dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="40dp"
            android:text="@string/registration_form"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="40dp"
            android:hint="@string/username"
            android:inputType="text"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextCitEmail"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:hint="@string/cit_email"
            android:inputType="textEmailAddress"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:autofillHints="" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"/>

        <TextView
            android:id="@+id/already_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="5dp"
            android:text="@string/already_account"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>




