<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgimgwhite"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#800000"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logoIV"
        android:layout_width="71dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/materialToolbar"
        app:layout_constraintStart_toStartOf="@+id/materialToolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo_svg" />

    <TextView
        android:id="@+id/wildcatsHubTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/inter"
        android:text="WILDCATS HUB"
        android:textColor="#FFD700"
        android:textSize="32sp"
        android:shadowColor="@color/black"
        android:shadowRadius="1.6"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        app:layout_constraintBottom_toBottomOf="@+id/materialToolbar"
        app:layout_constraintStart_toEndOf="@+id/logoIV"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:id="@+id/SVHomePage"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/materialToolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        >

        <LinearLayout
            android:id="@+id/layout_homepage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/inter"
                android:gravity="center"
                android:text="Welcome, Raiza!"
                android:textColor="#B8860B"
                android:textSize="32dp"
                app:layout_constraintBottom_toTopOf="@+id/wildcatIV"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <!--        <ImageView-->
            <!--            android:id="@+id/wildcatIV"-->
            <!--            android:layout_width="250dp"-->
            <!--            android:layout_height="125dp"-->
            <!--            android:layout_marginBottom="8dp"-->
            <!--            app:layout_constraintBottom_toTopOf="@+id/signInTV"-->
            <!--            app:layout_constraintEnd_toEndOf="parent"-->
            <!--            app:layout_constraintStart_toStartOf="parent"-->
            <!--            app:srcCompat="@drawable/wildcat"-->
            <!--            android:layout_gravity="center"/>-->

            <ImageView
                android:id="@+id/gifImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/cheer" />

            <TableRow
                android:layout_width="331dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp">

                <ImageButton
                    android:id="@+id/taskmaster"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/taskmaster"
                    android:scaleType="fitCenter"
                    android:src="@drawable/taskmastericon"
                    android:textSize="7pt" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10" />

                <ImageButton
                    android:id="@+id/directory"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/directory"
                    android:scaleType="fitCenter"
                    android:src="@drawable/directoryicon"
                    android:textSize="7pt" />
            </TableRow>

            <TableRow
                android:layout_width="331dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <ImageButton
                    android:id="@+id/btnCITMap"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/directory"
                    android:scaleType="fitCenter"
                    android:src="@drawable/citmapicon"
                    android:textSize="7pt" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10" />

                <ImageButton
                    android:id="@+id/btnCalendar"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/calendar"
                    android:scaleType="fitCenter"
                    android:src="@drawable/calendaricon"
                    android:textSize="7pt" />
            </TableRow>

            <TableRow
                android:layout_width="331dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <ImageButton
                    android:id="@+id/btnEmergency"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/emergency"
                    android:scaleType="fitCenter"
                    android:src="@drawable/emergencyicon"
                    android:textSize="7pt" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10" />
            </TableRow>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>




